--- a/about.html
+++ b/about.html
@@ -209,7 +209,7 @@ footer nav a:hover { text-decoration: underline; }
 <main>
   <section>
     <h2>Who We Are</h2>
-    <p>Hey there! 👋 I’m <strong>Corbin</strong>, founder of <strong>PoopDood</strong>. I started this service to help Lubbock pet owners keep their yards clean, fresh, and poop-free — without the hassle. What started as a small side gig has grown into a full local operation that takes pride in helping families enjoy their backyards again.</p>
+  <p>Hey there! 👋 I’m <strong>Corbin</strong>, founder of <strong>PoopDood</strong>. I started this service to help Lubbock pet owners keep their yards <strong>clean</strong>, <strong>fresh</strong>, and <strong>poop free</strong> <strong>without the hassle.</strong> What started as a small side gig has grown into a full local operation that takes pride in helping families enjoy their backyards again.</p>
   </section>
 
   <section>
@@ -280,4 +280,5 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
