--- a/about.html
+++ b/about.html
@@ -209,7 +209,7 @@ footer nav a:hover { text-decoration: underline; }
 <main>
   <section>
     <h2>Who We Are</h2>
-  <p>Hey there! 👋 I’m <strong>Corbin</strong>, founder of <strong>PoopDood</strong>. I started this service to help Lubbock pet owners keep their yards <strong>clean</strong>, <strong>fresh</strong>, and <strong>poop free</strong> <strong>without the hassle.</strong> What started as a small side gig has grown into a full local operation that takes pride in helping families enjoy their backyards again.</p>
+  <p>Hey there! 👋 I’m <strong>Corbin</strong>, founder of <strong>PoopDood</strong>. I started this service to help Lubbock dog owners keep their yards <strong>clean</strong>, <strong>fresh</strong>, and <strong>poop free</strong> <strong>without the hassle.</strong> What started as a small side gig has grown into a full local operation that takes pride in helping families enjoy their backyards again. With 5+ years of experience <strong>I ensure you a clean yard.</strong></p>
   </section>
 
   <section>
@@ -221,9 +221,9 @@ footer nav a:hover { text-decoration: underline; }
     <h2>Why Choose Us?</h2>
     <ul>
       <li>✅ Reliable and on time every visit</li>
-      <li>🐶 Pet-friendly and respectful of your space</li>
+      <li>🐶 Easy to contact, just text or call</li>
       <li>💩 Affordable with zero contracts</li>
-      <li>🌿 Keeping Lubbock lawns clean and safe</li>
+      <li>🌿 5+ years in Lbk, locally owned business</li>
     </ul>
   </section>
 </main>
@@ -280,5 +280,4 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
-
 
