--- a/faq.html
+++ b/faq.html
@@ -244,7 +244,7 @@ body.dark .footer-links .btn {
     <p>We proudly serve <strong>Lubbock, TX</strong> and nearby neighborhoods.</p>
 
     <h2>💵 How do I pay?</h2>
-    <p>We accept <strong>Venmo</strong>, <strong>Cash App</strong>, and <strong>card payments</strong> through secure online invoicing.</p>
+    <p>We accept <strong>Venmo</strong>, <strong>Cash App</strong>, and <strong>Card Payments</strong> through secure online invoicing.</p>
 
     <h2>🕒 Can I skip a week?</h2>
     <p>Absolutely. Just text or message us before your pickup day, and we’ll adjust your schedule.</p>
@@ -314,7 +314,7 @@ document.addEventListener('DOMContentLoaded', () => {
       "name": "How do I pay?",
       "acceptedAnswer": {
         "@type": "Answer",
-        "text": "We accept Venmo, Cash App, and card payments through secure online invoicing."
+        "text": "We accept Venmo, Cash App, and Card Payments through secure online invoicing."
       }
     },
     {
@@ -331,4 +331,5 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
