--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LW50NWL9GM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LW50NWL9GM');
+</script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="pooper scooper Lubbock, dog waste removal Lubbock TX, yard poop cleanup, pet waste removal near me, poop pickup service">
@@ -587,3 +596,4 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
