--- a/about.html
+++ b/about.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LW50NWL9GM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LW50NWL9GM');
+</script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>About PoopDood — Lubbock Dog Poop Removal</title>
@@ -280,4 +289,5 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
