--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@ body.dark .logo {
 
 <header>
     <img 
-  src="https://scontent-vie1-1.xx.fbcdn.net/v/t39.30808-6/558151618_1250881373722029_7185767476516381859_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=FJKAC20gYcAQ7kNvwGGhi1v&_nc_oc=AdkDgPe2w3iNvRmQchEZqIi9W_KTBg7ZIQzvGgAnbT9EShfTx37wfDYdKyxhnP4siyo&_nc_zt=23&_nc_ht=scontent-vie1-1.xx&_nc_gid=4W2Nu9oYhEcimNen6FGKhQ&oh=00_AfcFXKmWqKLQPe3U_ifdRgKZgIqdnENgLhDuO7qQM19fYA&oe=68EA7078"
+  src="https://i.ibb.co/dF93pY3/copyright-free-logo-1.png"
   alt="PoopDood Logo"
   class="logo"
 />
@@ -500,7 +500,7 @@ body.dark .logo {
 
 <footer>
   <img 
-    src="https://scontent-vie1-1.xx.fbcdn.net/v/t39.30808-6/558151618_1250881373722029_7185767476516381859_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=FJKAC20gYcAQ7kNvwGGhi1v&_nc_oc=AdkDgPe2w3iNvRmQchEZqIi9W_KTBg7ZIQzvGgAnbT9EShfTx37wfDYdKyxhnP4siyo&_nc_zt=23&_nc_ht=scontent-vie1-1.xx&_nc_gid=4W2Nu9oYhEcimNen6FGKhQ&oh=00_AfcFXKmWqKLQPe3U_ifdRgKZgIqdnENgLhDuO7qQM19fYA&oe=68EA7078"
+    src="https://i.ibb.co/dF93pY3/copyright-free-logo-1.png"
     alt="PoopDood Logo"
     class="footer-logo"
   />
@@ -596,4 +596,5 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
